--- a/kissa/index.html
+++ b/kissa/index.html
@@ -57,6 +57,79 @@
                 <a class="link-button" href="./concept.html">CONCEPT</a>
             </div>
         </div>
+
+        <div class="recommended">
+            <h2>RECOMMENDED</h2>
+            <ul class="item-list">
+                <li>
+                    <img src="./images/index/img-item01.jpg" alt="カフェラテの商品画像">
+                    <dl>
+                        <dt>カフェラテ</dt>
+                        <dd>
+                            エスプレッソとミルク、この組み合わせに勝<br>
+                            てるものはなかなか見つかりません。ホッと<br>
+                            したいとき、やっぱりラテが欲しくなる。
+                        </dd>
+                    </dl>
+                    <p class="price">\460</p>
+                </li>
+
+                <li>
+                    <img src="./images/index/img-item02.jpg" alt="レーズンバターサンドの商品画像">
+                    <dl>
+                        <dt>レーズンバターサンド</dt>
+                        <dd>
+                            コーヒーに合うお菓子を追及して生まれた当<br>
+                            店の大人気メニュー。数量・季節ともに限定<br>
+                            のため、見つけたらぜひお試しを
+                        </dd>
+                    </dl>
+                    <p class="price">\480</p>
+                </li>
+
+                <li>
+                    <img src="./images/index/img-item03.jpg" alt="アメリカーノの商品画像">
+                    <dl>
+                        <dt>アメリカーノ</dt>
+                        <dd>
+                            浅の豆のこだわりの配合でブレンドし<br>
+                            た、スッキリとさわやかな飲み口の当<br>
+                            店看板メニュー。ホッとでもアイスでも。
+                        </dd>
+                    </dl>
+                    <p class="price">\420</p>
+                </li>
+
+                <li>
+                    <img src="./images/index/img-item04.jpg" alt="レモネードの商品画像">
+                    <dl>
+                        <dt>レモネード</dt>
+                        <dd>
+                            瀬戸内海に浮かぶ小島で、オーナー自らが<br>
+                            栽培したとっておきのレモンを、たっぷり<br>
+                            と使った自慢のレモネードです
+                        </dd>
+                    </dl>
+                    <p class="price">\420</p>
+                </li>
+
+                <li>
+                    <img src="./images/index/img-item05.jpg" alt="ホットドッグ・チリの商品画像">
+                    <dl>
+                        <dt>ホットドッグ・チリ</dt>
+                        <dd>
+                            ちょっと小腹がすいたとき、あると嬉しい<br>
+                            ホットドッグ。特性チリソースとチーズを
+                            かければ、もう言葉はいりません。
+                        </dd>
+                    </dl>
+                    <p class="price">\540</p>
+                </li>
+            </ul>
+            <div class="link-button-area">
+                <a class="link-button" href="./menu.html">MENU</a>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
